/*
 * This Java source file was generated by the Gradle 'init' task.
 */
package com.smartmapper;

import org.springframework.boot.SpringApplication;
import org.springframework.boot.autoconfigure.SpringBootApplication;
import org.springframework.boot.autoconfigure.jdbc.DataSourceAutoConfiguration;
import org.springframework.context.annotation.Bean;
import springfox.documentation.builders.RequestHandlerSelectors;
import springfox.documentation.spi.DocumentationType;
import springfox.documentation.spring.web.plugins.Docket;
import springfox.documentation.swagger2.annotations.EnableSwagger2;


@SpringBootApplication(exclude={DataSourceAutoConfiguration.class})
@EnableSwagger2
public class AppMain {
    public String getGreeting() {
        return "Hello dolphin.";
    }

    public static void main(String[] args) {
        SpringApplication.run(AppMain.class, args);
        System.out.println(new AppMain().getGreeting());
    }

    @Bean
    public Docket productApi() {
        return new Docket(DocumentationType.SWAGGER_2).select()
                .apis(RequestHandlerSelectors.basePackage("com.smartmapper")).build();
    }
}
